--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>消費大獎賞2025</title>
+    <title>消費大獎賞2025個人記錄</title>
     <style>
         :root {
             --primary-color: #28a745;
@@ -273,7 +273,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>消費大獎賞2025</h2>
+        <h2>消費大獎賞2025個人記錄</h2>
         <div class="time-info" id="timeInfo"></div>
 
         <form id="recordForm">
@@ -387,7 +387,7 @@
         <input type="file" id="fileInput" accept=".csv" style="display: none;" onchange="importCSV(event)">
         
         <div class="footer-note">
-            <p>注意：所有資料以匿名方式儲存在Firebase數據庫中。</p>
+            <p>注意：所有資料以匿名方式儲存在Firebase數據庫中。/n本網頁與活動官方無關，僅為個人開發使用，開發者對內容提供、儲存或滅失不負任何法律責任。</p>
         </div>
         
         <div class="privacy-notice">
