--- a/index.html
+++ b/index.html
@@ -281,14 +281,14 @@
                 <label for="platform">平台:</label>
                 <select id="platform" required>
                     <option value="">請選擇</option>
-                    <option>Alipay</option>
-                    <option>BOC</option>
-                    <option>GFB</option>
-                    <option>ICBC</option>
-                    <option>Luso</option>
-                    <option>MPay</option>
-                    <option>TFB</option>
-                    <option>UePay</option>
+                    <option value="Alipay">Alipay支付寶</option>
+                    <option value="BOC">BOC中銀</option>
+                    <option value="GFB">GFB廣發</option>
+                    <option value="ICBC">ICBC工銀</option>
+                    <option value="Luso">Luso國際</option>
+                    <option value="MPay">MPay</option>
+                    <option value="TFB">TFB大豐</option>
+                    <option value="UePay">UePay極易付</option>
                 </select>
             </div>
             <div>
